# TheEngin

./: .gitignore  BACKEND_SWITCHING.md  BLOAT_FIX_SUMMARY.md  BUILDING-AN-APP-WITH-THEENGINE.md  ENGINE_UPDATING.md  Game.vcxproj  REFACTORING_EXAMPLE.md  REFACTORING_PLAN.md  SoftGuy_Usage_Guide.md  SpringGuy_Usage_Guide.md  TestScene_Spawn_Panel_Guide.md  TheEngine.rc  TheEngine.sln  TheEngine.vcxproj  imgui.ini  vcpkg.json
Archive/: README.md
Archive/Components/: AdvancedSlicingSystem.h  CarPhysicsComponent.h  CardComponent.h  CardFrameComponent.h  CardPhysicsComponent.h  ColliderComponent.h  DraggableComponent.h  SunComponent.cpp  SunComponent.h
Archive/Scenes/: BridgeScene.cpp  BridgeScene.h  CloudScene.cpp  CloudScene.h  FlipFluidSimulationScene.cpp  FlipFluidSimulationScene.h  JellyTetrisReduxScene.cpp  JellyTetrisReduxScene.h  MarbleMazeScene.cpp  MarbleMazeScene.h  OptimizedParticleSystem.cpp  OptimizedParticleSystem.h  PartitionScene.3D.cpp  PartitionScene.DBSCAN.cpp  PartitionScene.KMeans.cpp  PartitionScene.POI.cpp  PartitionScene.UI.cpp  PartitionScene.Visualization.cpp  PartitionScene.cpp  PartitionScene.h  PhysicsTetrisScene.cpp  PhysicsTetrisScene.h  PowderScene.cpp  PowderScene.h  SPHFluidSimulationScene.cpp  SPHFluidSimulationScene.h  SpiderSolitaireScene.cpp  SpiderSolitaireScene.h  ThreeDBridgeGameScene.cpp  ThreeDBridgeGameScene.h
DX3D/Assets/Shaders/: Basic.hlsl  Basic3D.hlsl  Line.hlsl  Line.ps.hlsl  MetaballCompute.hlsl  OpenGLFallback.glsl  OpenGLLine.glsl  README_Lines.md  ShadowMapDebug.hlsl  SimpleShadowMap.hlsl  Sun.hlsl  Text.hlsl
DX3D/Assets/Textures/: Sprite-0001.aseprite
DX3D/Assets/models/: Sphere.fbx
DX3D/Assets/models/headcrab/: untitled.mtl
DX3D/Include/DX3D/Components/: CarPhysicsComponent.h
DX3D/Include/DX3D/Core/: AndroidPlatform.h  Base.h  Common.h  Core.h  Logger.h
DX3D/Include/DX3D/Game/: Display.h  Game.h  SceneHelper.h
DX3D/Include/DX3D/Math/: Geometry.h  Types.h  Vec3.h  Vec4.h
DX3D/Include/DX3D/Physics/: AABBPhysics.h  PhysicsSystem.h  PhysicsSystem.inl  README.md
DX3D/Include/DX3D/Window/: Window.h
DX3D/Include/Libraries/imgui-docking/: imconfig.h
DX3D/Include/Libraries/stb/: stb_image.cpp  stb_image.h
DX3D/Source/DX3D/Components/: AABBTree.cpp  AABBTree.h  AnimationComponent.cpp  AnimationComponent.h  ButtonComponent.cpp  ButtonComponent.h  CardComponent.h  ColliderComponent.h  DraggableComponent.h  FirmGuyComponent.h  FirmGuySystem.h  KDTree.cpp  KDTree.h  Mesh3DComponent.cpp  Mesh3DComponent.h  Octree.cpp  Octree.h  PanelComponent.h  Physics3DComponent.cpp  Physics3DComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  Quadtree.cpp  Quadtree.h  SoftGuyComponent.cpp  SoftGuyComponent.h  SpringGuyComponent.cpp  SpringGuyComponent.h  SunComponent.cpp  TetrisPhysicsComponent.h
DX3D/Source/DX3D/Core/: AndroidPlatform.cpp  Entity.h  EntityManager.h  Input.cpp  Input.h  Logger.cpp  Scene.cpp  Scene.h  SystemManager.h  TransformComponent.h
DX3D/Source/DX3D/DataStructures/: AABBTree.cpp  AABBTree.h  KDTree.cpp  KDTree.h  Octree.cpp  Octree.h  Quadtree.cpp
DX3D/Source/DX3D/Game/: Display.cpp  Game.cpp  SceneHelper.cpp
DX3D/Source/DX3D/Graphics/: Camera.cpp  Camera.h  DeviceContext.cpp  DeviceContext.h  DirectWriteText.cpp  DirectWriteText.h  FBXLoader.cpp  FBXLoader.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsLogUtils.h  GraphicsPipelineState.cpp  GraphicsPipelineState.h  GraphicsResource.h  GraphicsUtils.h  IndexBuffer.h  LineRenderer.cpp  LineRenderer.h  Mesh.cpp  Mesh.h  ShaderBinary.cpp  ShaderBinary.h  ShadowMap.cpp  ShadowMap.h  SkyboxRenderer.cpp  SkyboxRenderer.h  SpriteComponent.cpp  SpriteComponent.h  SwapChain.cpp  SwapChain.h  TextUtilities.h  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h  VertexShaderSignature.cpp  VertexShaderSignature.h
DX3D/Source/DX3D/Math/: DefaultMathBackend.cpp  GLMMathBackend.cpp  Geometry.cpp  MathBackend.cpp  Types.cpp
DX3D/Source/DX3D/Physics/: AABBPhysics.cpp  PhysicsSystem.cpp
DX3D/Source/DX3D/Systems/: AdvancedSlicingSystem.h
DirectXGame/x64/Release/: Basic.hlsl  DirectXGame.exe.recipe
DirectXGame/x64/Release/DirectXGame.tlog/: CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Game/: TheEngineConfig.ini  main.cpp
Game/Scenes/TestScenes/: StudyScene.cpp  StudyScene.h  TestScene.cpp  ThreeDTestScene.cpp  ThreeDTestScene.h
TheBridgeGame/: README.txt
TheBridgeGame/TheEngine/Assets/Shaders/: BackgroundDots.hlsl  Basic.hlsl  Line.vs.hlsl  OpenGLFallback.glsl  ShadowMap.hlsl  Text.hlsl  VolumetricClouds.hlsl
TheEngine/Assets/Shaders/: Line.hlsl  Metaball.hlsl  OpenGLBackgroundDots.glsl  OpenGLLine.glsl  SimpleShadowDebug.hlsl
TheEngine/Assets/models/headcrab/: headcrab.fbx  reference.smd
TheEngine/Include/Libraries/imgui-docking/: imconfig.h
TheEngine/Include/Libraries/stb/: stb_image.cpp
TheEngine/Include/TheEngine/: All.h
TheEngine/Include/TheEngine/Core/: AndroidPlatform.h  Base.h  Common.h  Core.h  (+2 more)
TheFluidSimulations/: README.md  TheFluidSimulations.sln  TheFluidSimulations.vcxproj  main.cpp
TheFluidSimulations/Components/: FirmGuySystem.cpp
TheFluidSimulations/Scenes/: FlipFluidSimulationScene.cpp  PowderScene.cpp  SPHFluidSimulationScene.cpp
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  main_android.cpp
scripts/: update_engine_in_project.ps1
(+216 files in other folders)
